Osa 3. Viides tehtävä

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <!--Tee tehtävät tänne-->
   <h1>Seitsemän veljestä</h1>
+  <!--Kuva ensimmäisestä sivusta kirjassa Seitsemän veljestä-->
+  <img src="assets/lapiokivi.png" alt="Ensimmäinen sivu" height="498" width="333"/>
   <h2>Tärkeät päähenkilöt</h2>
   <ul>
 	<li>Päähenkilöt
