--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Seitsemän veljestä</h1>
   <!--Kuva ensimmäisestä sivusta kirjassa Seitsemän veljestä-->
   <img src="assets/lapiokivi.png" alt="Ensimmäinen sivu" height="498" width="333"/>
-  <h2>Tärkeät päähenkilöt</h2>
+  <h2>Tärkeät henkilöt</h2>
   <ul>
 	<li>Päähenkilöt
 		<ul>
@@ -36,7 +36,7 @@
   <h2>Ensimmäinen luku</h2>
   <p><strong>Jukolan</strong> talo, eteläisessä <em>Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki <em><strong>Toukolan</strong></em> kylää.</p>
   <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
-  <p><em>jatkuu...</em></p>
+  <p style="color:red"><em>jatkuu...</em></p>
 </body>
 
 </html>
