--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 	</li>
   </ul>
   <h2>Ensimmäinen luku</h2>
-  <p><strong>Jukolan</strong> talo, eteläisessä <em>Hämeessä</em>, seisoo erään mäen pohjoisella rinteellä, liki <em><strong>Toukolan</strong></em> kylää.</p>
+  <p>Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.</p>
   <p>Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.</p>
-  <p style="color:red"><em>jatkuu...</em></p>
+  <p><em>jatkuu...</em></p>
 </body>
 
 </html>
